Adicionando meta tag OG

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="A melhor hamburgueria da regiao"/>
-    <meta property="og:image" content="http://127.0.0.1:5500/assets/logo1.jpg"/>
+    <meta property="og:image" content="https://site-cardapio-hamburgueria-git-main-mayaras-projects-76bd3140.vercel.app/assets/logo1.jpg"/>
     <meta property="og:description" content="O melhor hamburguer artesanal da região"/>
     <meta property="og:site_name" content="MMAHamburgueria"/>
 
