--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@
             <input 
             type="text"
             placeholder="Digite o seu endereço completo..."
-            id="address-warn"
+            id="address"
             class="w-full border-2 p-1 rounded my-1">
 
-            <p class="text-red-500 hidden"  id="address">Digite seu endereço completo!</p>
+            <p class="text-red-500 hidden"  id="address-warn">Digite seu endereço completo!</p>
 
             <div class="flex items-center justify-between at-5 w-full">
                 <button id="close-modal-btn" class="bg-red-500 text-white px-4 py-1 rounded">Fechar</button>
