Alteração das descriçoes e alteação da cor do modal

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="w-full h-[420px] bg-zinc-900 bg-home bg-cover bg-center">
         <div class="w-full h-full flex flex-col justify-center items-center">
             <img src="./assets/logo1.jpg" alt="logo" class="w-32 h-32 rounded-full shadow-lg hover:scale-110"/>
-            <h1 class="text-5xl mt-4 mb-2 font-bold text-white">MMA Hamburgueria</h1>
+            <h1 class="text-5xl mt-4 mb-2 font-bold text-yellow-500">MMA Hamburgueria</h1>
             <span class="font-medium font-serif text-white">Rua Anthony 02, Centro - Guarulhos/SP</span>
 
             <div class="bg-green-600 px-4 py-1 rounded-lg mt-5" id="date-span">
@@ -32,7 +32,7 @@
     </header>
 
     <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6">
-        Conheça Nosso enu
+        Conheça Nosso Menu!
     </h2>
 
     <div id="menu">
@@ -51,7 +51,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Hambúrguer de carne 100% bovina, queijo cheddar, bacon crocante, alface, tomate e cebola roxa, com maionese especial e ketchup, no pão fresquinho.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 19,90</p>
@@ -78,7 +78,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer Chease</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Hambúrguer suculento com queijo cheddar derretido, alface, tomate e cebola, servido no pão macio com maionese e ketchup.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 29,90</p>
@@ -105,7 +105,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer Smash Duplo</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Dois hambúrgueres smash de carne bovina, crocantes e suculentos, com queijo cheddar derretido, alface, tomate e picles, tudo no pão macio com molho especial.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 25,90</p>
@@ -132,7 +132,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer Frango</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Peito de frango grelhado e suculento, coberto com queijo derretido, alface crocante, tomate e maionese especial, servido no pão macio.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 32,90</p>
@@ -159,7 +159,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer XTudo</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">PHambúrguer suculento com queijo cheddar, bacon crocante, presunto, ovo frito, alface, tomate, cebola e picles, servido no pão macio com maionese e ketchup.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 35,90</p>
@@ -186,7 +186,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer Costela</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Hambúrguer feito com carne de costela, coberto com queijo cheddar, cebola caramelizada e maionese defumada, servido em um pão macio.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 19,90</p>
@@ -213,7 +213,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer Smash Onion</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Dois hambúrgueres smash, queijo cheddar, cebola caramelizada e maionese especial, no pão macio.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 37,90</p>
@@ -240,7 +240,7 @@
 
                 <div>
                     <p class="font-bold">Hamburguer Smash Salad</p>
-                    <p class="text-sm">Pão brioche, burger 160g, queijo prato e maionese da casa</p>
+                    <p class="text-sm">Dois hambúrgueres smash, queijo cheddar, alface crocante, tomate fresco e molho especial, no pão macio.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-9">
                         <p class="font-bold text-lg">R$ 25,90</p>
@@ -346,11 +346,11 @@
 
     </div>
 
-    <footer class="w-full bg-red-500 py-3 fixed bottom-0 z-40 flex items-center justify-center">
-        <button class="flex items-center gap-2 text-white font-bold" id="cart-btn">
+    <footer class="w-full bg-yellow-500 py-3 fixed bottom-0 z-40 flex items-center justify-center">
+        <button class="flex items-center gap-2 text-black font-bold" id="cart-btn">
             (<span id="cart-count">0</span>)
             Carrinho
-            <i class="fa fa-cart-plus text-lg text-white"></i>
+            <i class="fa fa-cart-plus text-lg text-black"></i>
         </button>
     </footer>
 
