--- a/index.html
+++ b/index.html
@@ -314,6 +314,57 @@
 
             </div>
 
+
+            <div class="flex gap-2 w-full">
+
+                <img 
+                src="./assets/refri-3.JPG" 
+                alt="Sukita Tubaína" 
+                class="w-28 h-28 rounded-md hover:scala-110 hover:-rotate-2 duration-300"/>
+
+
+                <div class="w-full">
+                    <p class="font-bold">Sukita Tubaína</p>
+
+                    <div class="flex items-center gap-2 justify-between mt-9">
+                        <p class="font-bold text-lg">R$ 6,90</p>
+                        <button class="bg-gray-900 px-3 rounded add-to-cart-btn"
+                            data-name="Sukita Tubaína"
+                            data-price="6.90">
+
+                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                        </button>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="flex gap-2 w-full">
+
+                <img 
+                src="./assets/refri-4.jpg" 
+                alt="Fanta Laranja" 
+                class="w-28 h-28 rounded-md hover:scala-110 hover:-rotate-2 duration-300"/>
+
+
+                <div class="w-full">
+                    <p class="font-bold">Fanta Laranja</p>
+
+                    <div class="flex items-center gap-2 justify-between mt-9">
+                        <p class="font-bold text-lg">R$ 6,90</p>
+                        <button class="bg-gray-900 px-3 rounded add-to-cart-btn"
+                            data-name="Fanta Laranja"
+                            data-price="6.90">
+
+                            <i class="fa fa-cart-plus text-lg text-white"></i>
+                        </button>
+                    </div>
+
+                </div>
+
+            </div>
+
             
 
         </div>
